# CodeReviewAI

./: .dockerignore  .env.default  Makefile  README.md  docker-compose.yaml  pyproject.toml
compose/app/: Dockerfile  start
requirements/: main.txt
src/: __init__.py  main.py
src/config/: __init__.py  cache.py  logging.py  public_api.py
src/config/integrations/: __init__.py  github.py  openai.py
src/domain/review/: entities.py
src/infrastructure/: __init__.py
src/infrastructure/application/: __init__.py  factory.py
src/infrastructure/application/entities/: __init__.py  mixins.py
src/infrastructure/application/errors/: entities.py  handlers.py
src/infrastructure/application/middlewares/: __init__.py  cors.py  sessions.py  types.py
src/infrastructure/cache/: __init__.py  entities.py  services.py
src/infrastructure/cache/tests/: __init__.py  services.py
src/integrations/: __init__.py
src/integrations/github/: contracts.py  services.py
src/integrations/openai/: __init__.py  contracts.py  services.py
src/operational/: __init__.py  review.py
src/presentation/: __init__.py
src/presentation/review/: contracts.py  rest.py
tests/: conftest.py  services.py
tests/integration/: conftest.py
tests/integration/review/: test_correct.py  test_incorrect.py
